Thu Jun 23 12:39:08 CEST 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/*.doxygen:
          Disable html help, seems doxygen now disables the search option
          when html help is enabled

Thu Jun 23 13:46:08 CEST 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO version 2.0.3 released.

Wed Jun 22 18:25:21 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/AnyTypeCode/Any_Basic_Impl.cpp:
        * tao/AnyTypeCode/Any_Basic_Impl.h:
        * tests/LongDouble/client.cpp:
        * tests/IDL_Test/constants.idl:
        * tests/IDL_Test/union.idl:
        * TAO_IDL/include/ast_expression.h:
        * TAO_IDL/be/be_helper.cpp:
        * TAO_IDL/be/be_visitor_constant/constant_cs.cpp:
        * TAO_IDL/be/be_visitor_constant/constant_ch.cpp:
        * TAO_IDL/ast/ast_constant.cpp:
        * TAO_IDL/ast/ast_expression.cpp:
        * NEWS:

          Reverted all changes related to support for long double
          constants in IDL.

Wed Jun 22 15:15:05 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/orbsvcs/Naming/Naming_Server.cpp:

          Ensure the naming service can use the CSD_TP strategy if necessary.
          Since the naming service is single threaded, it can become a
          bottleneck when there is very heavy use.

          The need for this change may also indicate a problem with the
          CSD strategy implementation. It appears that the thread pool at
          least is only initialized when the POA Manager is activated. If
          A POA is created with using a POA Manager already in the active
          state, the TP is not initialized. Alternatively this might be a
          problem with the POA creation, that create_POA can be supplied a
          POA Manager that is already been activated, and the new POA is
          itself instantly active.

Wed Jun 22 14:49:09 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Security/BiDirectional/run_test.pl: